# LegalAnalyzer_AI

backend/: .gitignore  Dockerfile  README.md  SETUP.md  TODO.md  aerich.ini  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini
backend/controllers/: __init__.py  auth_controller.py  case_controller.py  document_controller.py
backend/core/: __init__.py  auth.py  config.py  constants.py  dependencies.py  ml_utils.py  tortoise_config.py
backend/core/document_processing/: __init__.py
backend/core/models/: __init__.py  base.py  case.py  document.py  timeline.py  user.py
backend/docs/: EXTRACTION_WORKFLOW.md
backend/dtos/: __init__.py  auth_dto.py  case_dto.py  document_dto.py
backend/features/: __init__.py
backend/features/documents/: __init__.py
backend/infrastructure/: __init__.py  database.py  elasticsearch_client.py  pinecone_client.py  storage.py
backend/migrations/models/: 0_20251009151410_init.py  1_20251016133218_add_cases_and_documents.py  2_20251016212904_add_relevance_fields.py  3_20251016232700_add_timeline_events.py
backend/orchestrators/: __init__.py  document_processor.py
backend/prompts/: __init__.py
backend/prompts/content_analysis/: __init__.py  content_classification.py  email_classification.py
backend/prompts/relevance/: __init__.py  case_relevance.py
backend/prompts/summarization/: __init__.py  legal_summarization.py
backend/prompts/timeline/: __init__.py  fact_extraction.py  legal_analysis.py
backend/repositories/: __init__.py
backend/scripts/: create_test_users.py
backend/services/: __init__.py  auth_service.py  case_service.py  content_analysis_service.py  document_indexing_service.py  document_service.py  extraction_service.py  models.py  preprocessing_service.py  relevance_service.py  timeline_service.py
backend/services/chunking/: __init__.py  chunking_service.py  models.py  semantic_chunker.py
backend/services/content_analysis/: __init__.py  base_analyzer.py  content_classifier.py  default_analyzer.py  email_analyzer.py
backend/services/models/: __init__.py  enums.py  extraction_models.py
backend/services/summarization/: __init__.py  base_summarizer.py  document_summarization_service.py  llama_client.py  saul_client.py  summarization_service.py  utils.py
backend/services/text_extraction/: __init__.py  base_extractor.py  extraction_strategy_factory.py  ocr_extractor.py  pdf_extractor.py  text_extractor.py
backend/tests/: README.md  __init__.py
backend/tests/extractor_tests/: __init__.py  test_pdf_extractor.py  test_txt_extractor.py
backend/tests/file_output/cases/case_1/documents/doc_2/extraction/: spam_blocks.json
backend/tests/helpers/: __init__.py  file_samples.py  mock_elasticsearch.py  mock_pinecone.py  mock_storage.py
backend/tests/helpers/classification_samples/: blocks.json  email_blocks.json
backend/tests/helpers/content_analysis_samples/: spam_blocks.json
backend/tests/helpers/test_data/: 43_blocks.json
backend/tests/integration/: README.md  __init__.py  test_full_pipeline.py
backend/tests/orchestrators/: __init__.py  test_document_processor.py
backend/tests/services/: test_content_analysis_service.py  test_default_analyzer.py  test_document_classifier_service.py  test_email_analyzer.py  test_preprocessing_service.py  test_relevance_real_llm.py  test_relevance_service.py  test_timeline_fact_extraction.py
backend/tests/services/chunking/: __init__.py  test_semantic_chunker.py
backend/tests/services/summarization/: __init__.py  test_llama_client.py  test_saul_client.py  test_summarization_service.py
(+37 files in other folders)
